tests/ast_interpreter/err_list_concat_type_mismatch.expected
<string>:2:18: error: operator + cannot be applied to List and String
    print([1, 2] + "hello");
                 ^
