tests/ast_interpreter/err_list_concat_type_mismatch.nx
fun main() {
    print([1, 2] + "hello");
}